--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -32,6 +32,18 @@
             android:screenOrientation="portrait"
             android:name="com.majia.alarmalarm.SecondActivity" >
         </activity>
+        <activity
+            android:screenOrientation="portrait"
+            android:name="com.majia.alarmalarm.AboutActivity" >
+        </activity>
+        <activity
+            android:screenOrientation="portrait"
+            android:name="com.majia.alarmalarm.EarlySongActivity" >
+        </activity>
+        <activity
+            android:screenOrientation="portrait"
+            android:name="com.majia.alarmalarm.MustSongActivity" >
+        </activity>
     </application>
 
 </manifest>
