enabled all the functions except in-app purchase
there are some minor bugs about pendingIntent mechanism

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -44,6 +44,14 @@
             android:screenOrientation="portrait"
             android:name="com.majia.alarmalarm.MustSongActivity" >
         </activity>
+        <activity
+            android:screenOrientation="portrait"
+            android:name="com.majia.alarmalarm.LocalSongEarlyActivity" >
+        </activity>
+        <activity
+            android:screenOrientation="portrait"
+            android:name="com.majia.alarmalarm.LocalSongMustActivity" >
+        </activity>
     </application>
 
 </manifest>
